// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart view Renders correctly 1`] = `
<div>
  <div
    class="min-h-screen flex flex-col text-brand-black"
  >
    <div
      class="bg-white z-10"
    >
      <header
        class="relative bg-brand-black"
      >
        <nav
          aria-label="Top"
          class="max-w-7xl mx-auto px-4 md:px-6 xl:px-8"
        >
          <div
            class="h-16 flex items-center justify-between border-b border-brand-black"
          >
            <div
              class="flex-1 flex items-center xl:hidden"
            >
              <button
                class="-ml-2 bg-white p-2 rounded-md text-gray-400"
                data-testid="button-open"
                type="button"
              >
                <span
                  class="sr-only"
                >
                  Open menu
                </span>
                <svg
                  aria-hidden="true"
                  class="h-6 w-6"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4 6h16M4 12h16M4 18h16"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
              </button>
            </div>
            <div
              class="hidden xl:flex-1 xl:block xl:self-stretch"
            >
              <div
                class="h-full flex space-x-10"
              >
                <a
                  class="flex items-center text-white hover:text-coreUI-text-tertiary pb-1.5 duration-500"
                  href="//www.60beans.de/uber-uns"
                >
                  <span
                    class="uppercase text-sm leading-5"
                  >
                    Über uns
                  </span>
                </a>
                <a
                  class="flex items-center text-white hover:text-coreUI-text-tertiary pb-1.5 duration-500"
                  href="//www.60beans.de/roesterei"
                >
                  <span
                    class="uppercase text-sm leading-5"
                  >
                    Unsere Röster
                  </span>
                </a>
                <a
                  class="flex items-center text-white hover:text-coreUI-text-tertiary pb-1.5 duration-500"
                  href="//blog.60beans.com"
                >
                  <span
                    class="uppercase text-sm leading-5"
                  >
                    Blog
                  </span>
                </a>
              </div>
            </div>
            <a
              class="flex h-full items-center pl-2 pr-2"
              href="//www.60beans.de"
            >
              <span
                class="sr-only"
              >
                60beans
              </span>
              <img
                alt="60beans"
                class="h-6"
                src="60beans-light.svg"
              />
            </a>
            <div
              class="flex-1 flow-root flex h-full items-center"
            >
              <div
                class="flex-1 flex h-full items-center justify-end xl:flex-none"
              >
                <div
                  class="hidden h-full xl:flex space-x-8 justify-end"
                >
                  <a
                    class="flex items-center text-white hover:text-coreUI-text-tertiary pb-1.5 duration-500"
                    href="/taste-finder"
                  >
                    <span
                      class="uppercase text-sm leading-5"
                    >
                      Tastefinder
                    </span>
                  </a>
                </div>
                <a
                  class="hidden xl:block ml-10"
                  href="/profile"
                >
                  <svg
                    class="undefined fill-brand-black stroke-brand-black"
                    fill="inherit"
                    height="24"
                    viewBox="0 0 24 25"
                    width="24"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M16 8.66663C16 10.8766 14.21 12.6666 12 12.6666C9.79 12.6666 8 10.8766 8 8.66663C8 6.45663 9.79 4.66663 12 4.66663C14.21 4.66663 16 6.45663 16 8.66663ZM4 18.6666C4 16.0066 9.33 14.6666 12 14.6666C14.67 14.6666 20 16.0066 20 18.6666V20.6666H4V18.6666Z"
                      fill="#FFFFFF"
                      fill-rule="evenodd"
                      stroke="none"
                      stroke-width="none"
                    />
                  </svg>
                </a>
                <div
                  class="ml-4 flow-root xl:ml-10"
                >
                  <a
                    class="group -m-2 p-2 flex items-center"
                    href="/cart"
                    id="toCart"
                  >
                    <div
                      class="static flex-shrink-0 relative"
                    >
                      <svg
                        class="undefined fill-brand-black stroke-brand-black"
                        fill="inherit"
                        height="24"
                        viewBox="0 0 24 25"
                        width="24"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M3 3.66663H5L5.4 5.66663M7 13.6666H17L21 5.66663H5.4M7 13.6666L5.4 5.66663M7 13.6666L4.70711 15.9595C4.07714 16.5895 4.52331 17.6666 5.41421 17.6666H17M17 17.6666C15.8954 17.6666 15 18.5621 15 19.6666C15 20.7712 15.8954 21.6666 17 21.6666C18.1046 21.6666 19 20.7712 19 19.6666C19 18.5621 18.1046 17.6666 17 17.6666ZM9 19.6666C9 20.7712 8.10457 21.6666 7 21.6666C5.89543 21.6666 5 20.7712 5 19.6666C5 18.5621 5.89543 17.6666 7 17.6666C8.10457 17.6666 9 18.5621 9 19.6666Z"
                          fill="none"
                          fill-rule="evenodd"
                          stroke="#FFFFFF"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                      <span
                        class="absolute top-3 left-4 h-4 w-4 z-10 bg-white rounded-full"
                      >
                        <div
                          class="absolute top-0 left-1 z-15 text-coreUI-text-primary text-xs leading-4 font-semibold"
                        >
                          1
                        </div>
                      </span>
                      <span
                        class="sr-only"
                      >
                        items in cart, view bag
                      </span>
                    </div>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </nav>
      </header>
    </div>
    <main
      class="flex flex-grow w-full items-start justify-center bg-white mt-4 mb-4"
    >
      <div
        class="w-full max-w-7xl mx-auto px-6 xl:px-8"
      >
        <h1
          class="mb-4 text-2xl leading-8 font-semibold"
        >
          Dein Warenkorb
        </h1>
        <div
          class="grid gap-2 grid-cols-1"
        >
          <div
            class="flex w-full md:grid-cols-2 pb-6 border-b border-coreUI-border mb-4"
          >
            <div
              class="flex justify-center items-center shrink-0 self-start relative w-32 h-32 mr-4"
            >
              <a
                class="flex justify-center items-center rounded-full bg-coreUI-background-images w-32 h-32"
                href="/product/7655228866776"
              >
                <img
                  alt="Cycle Blend"
                  class="w-28 max-h-28"
                  src="https://cdn.shopify.com/s/files/1/0632/7251/7848/products/ezgif-4-d921ab2e2b.png?v=1649246153"
                />
              </a>
            </div>
            <div
              class="flex flex-1 flex-col justify-between justify-items-start md:grid md:grid-cols-3 md:items-center"
            >
              <div>
                <div
                  class="text-base leading-6 font-semibold"
                >
                  Cycle Blend
                </div>
                <div>
                  <span
                    class="text-coreUI-text-secondary text-base leading-6"
                  >
                    250g | 
                  </span>
                  <span
                    class="text-coreUI-text-secondary text-base leading-6"
                  >
                    Ganze Bohne
                  </span>
                </div>
              </div>
              <div>
                <span
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  7,20 €
                </span>
                <span
                  class="text-coreUI-text-secondary ml-1 text-base leading-6"
                >
                  (
                  28,80 €
                  /kg)
                </span>
              </div>
              <span
                class="md:hidden"
              />
              <div
                class="mt-1.5 md:w-full md:flex md:justify-end"
              >
                <div
                  class="inline-flex justify-between px-4 py-2 text-left bg-white rounded-full border border-coreUI-text-tertiary cursor-default"
                  data-testid="quantity-select"
                >
                  <button
                    data-testid="quantity-minus"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="w-5 h-5"
                      fill="currentColor"
                      viewBox="0 0 20 20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </button>
                  <div
                    class="px-3.5"
                    data-testid="quantity-value"
                  >
                    1
                  </div>
                  <button
                    data-testid="quantity-plus"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="w-5 h-5"
                      fill="currentColor"
                      viewBox="0 0 20 20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </button>
                </div>
                <button
                  class="ml-2 inline-flex items-center px-4 py-2.5 w-fit rounded-full border border-coreUI-text-tertiary"
                  data-testid="button-cart-item-remove"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="h-5 w-5"
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="flex w-full md:grid-cols-2 pb-6 border-b border-coreUI-border"
          >
            <div
              class="flex justify-center items-center shrink-0 self-start relative w-32 h-32 mr-4"
            >
              <a
                class="flex justify-center items-center rounded-full bg-coreUI-background-images w-32 h-32"
                href="/product/23232323"
              >
                <img
                  alt="60beans"
                  class="w-28 max-h-28"
                  src="https://cdn.shopify.com/s/files/1/0632/7251/7848/products/ezgif-4-d921ab2e2b.png?v=1649246153"
                />
              </a>
            </div>
            <div
              class="flex flex-1 flex-col justify-between justify-items-start md:grid md:grid-cols-3 md:items-center"
            >
              <div>
                <div
                  class="text-base leading-6 font-semibold"
                >
                  60beans
                </div>
                <div>
                  <span
                    class="text-coreUI-text-secondary text-base leading-6"
                  >
                    1000g | 
                  </span>
                  <span
                    class="text-coreUI-text-secondary text-base leading-6"
                  >
                    Ganze Bohne
                  </span>
                </div>
              </div>
              <div>
                <span
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  7,20 €
                </span>
                <span
                  class="text-coreUI-text-secondary ml-1 text-base leading-6"
                >
                  (
                  7,20 €
                  /kg)
                </span>
              </div>
              <span
                class="md:hidden"
              />
              <div
                class="mt-1.5 md:w-full md:flex md:justify-end"
              >
                <div
                  class="inline-flex justify-between px-4 py-2 text-left bg-white rounded-full border border-coreUI-text-tertiary cursor-default"
                  data-testid="quantity-select"
                >
                  <button
                    data-testid="quantity-minus"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="w-5 h-5"
                      fill="currentColor"
                      viewBox="0 0 20 20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </button>
                  <div
                    class="px-3.5"
                    data-testid="quantity-value"
                  >
                    2
                  </div>
                  <button
                    data-testid="quantity-plus"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="w-5 h-5"
                      fill="currentColor"
                      viewBox="0 0 20 20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </button>
                </div>
                <button
                  class="ml-2 inline-flex items-center px-4 py-2.5 w-fit rounded-full border border-coreUI-text-tertiary"
                  data-testid="button-cart-item-remove"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="h-5 w-5"
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="grid justify-items-start md:justify-items-end mt-6"
        >
          <span
            class="uppercase text-coreUI-text-secondary text-xs leading-4"
          >
            Zwischensumme
          </span>
          <span
            class="mr-1 text-2xl leading-8 font-semibold"
          >
            10,00 €
          </span>
          <div
            class="text-coreUI-text-secondary text-xs leading-4"
          >
            Preise inkl. MwSt.
          </div>
        </div>
        <div
          class="grid gap-4 grid-cols-1 md:flex md:justify-end my-6"
        >
          <div
            class="grid md:order-2 justify-items-end"
          >
            <a
              class="flex w-full md:w-max"
              data-testid="goToCheckout"
              href="https://famousroasters.myshopify.com/cart/c/123456789"
              id="toCheckout"
            >
              <button
                class="flex w-full justify-center relative inline-flex flex-row items-center rounded-full border-2 px-4 py-2 text-base font-bold disabled:bg-brand-grey-whisper disabled:text-coreUI-text-secondary disabled:cursor-not-allowed text-brand-black bg-primary border-transparent hover:bg-brand-green-starship active:bg-primary"
                role="button"
                type="button"
              >
                Zur Kasse
              </button>
            </a>
          </div>
          <div
            class="grid md:order-1 push justify-items-start"
          >
            <a
              class="flex w-full md:w-max"
              href="/catalogue"
            >
              <button
                class="flex w-full justify-center relative inline-flex flex-row items-center rounded-full border-2 px-4 py-2 text-base font-bold text-white bg-brand-black border-transparent hover:bg-coreUI-text-secondary active:bg-brand-black"
                data-testid="continueShopping"
                role="button"
                type="button"
              >
                Weiter einkaufen
              </button>
            </a>
          </div>
        </div>
      </div>
    </main>
    <footer
      class="bg-brand-black text-base text-white py-10 z-30"
    >
      <div
        class="w-full max-w-7xl mx-auto mb-10 flex flex-col md:flex-row md:items-center justify-start mx-auto px-8 xl:px-10"
      >
        <div
          class="mb-2 md:mb-0 md:mr-2"
        >
          <svg
            fill="none"
            height="157"
            viewBox="0 0 400 400"
            width="157"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="200"
              cy="200"
              fill="#D4FF81"
              r="200"
            />
            <path
              clip-rule="evenodd"
              d="M266 225.882C266 267.294 243.14 288 214.739 288C196.728 288 183.336 279.488 177.332 266.604V285.239H136V112H177.332V182.86C184.259 171.357 196.728 161.694 214.97 161.694C243.14 161.694 266 182.86 266 224.042V225.882ZM231.006 225.964C231.006 240.559 219.132 252.391 204.483 252.391C189.835 252.391 177.96 240.559 177.96 225.964C177.96 211.369 189.835 199.538 204.483 199.538C219.132 199.538 231.006 211.369 231.006 225.964ZM251 156C263.15 156 273 146.15 273 134C273 121.85 263.15 112 251 112C238.85 112 229 121.85 229 134C229 146.15 238.85 156 251 156Z"
              fill="#212121"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="px-4 text-5xl leading-none"
        >
          Guten Kaffee besser finden.
        </div>
      </div>
      <div
        class="w-full max-w-7xl mx-auto grid gap-2 gap-y-10 grid-cols-1 md:grid-cols-2 mx-auto px-12 xl:px-14"
      >
        <div
          class="order-2 md:order-1"
        >
          <ul>
            <li
              class="mt-0"
            >
              <a
                href="/catalogue"
              >
                Shop
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="/taste-finder"
              >
                Tastefinder
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="//www.60beans.de/uber-uns"
              >
                Über uns
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="//www.notion.so/Datenschutzhinweise-ad5b45261a964166a74883d2770e28ea"
              >
                Datenschutz-Bestimmungen
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="//slender-petunia-c3c.notion.site/Imprint-33b18fd9e469471ab768eef8155da968"
              >
                Impressum
              </a>
            </li>
          </ul>
        </div>
        <div
          class="order-1 md:order-2"
        >
          <div>
            <div>
              <span
                class="font-syne text-3xl leading-10 font-semibold tracking-tight"
              >
                Kundensupport
              </span>
            </div>
            <div
              class="mt-6"
            >
              <span
                class="text-lg leading-7"
              >
                Fragen? Kommentare? Bedenken? Oder möchtest du uns einfach ein paar schöne Worte senden? Bitte klicke einfach unten rechts auf die Sprechblasen. Unser Team steht dir dort gerne zur Verfügung.
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-full max-w-7xl mx-auto text-center mt-10 mx-auto px-12 xl:px-14"
      >
        <span
          class="text-center text-base leading-6"
        >
          © 2022 60beans. Alle Rechte vorbehalten.
        </span>
        <br />
        <span
          class="text-center text-base leading-6"
        >
          Hergestellt mit ❤️ in Berlin.
        </span>
      </div>
    </footer>
  </div>
</div>
`;

exports[`Cart view Renders correctly for no cart id 1`] = `
<div>
  <div
    class="min-h-screen flex flex-col text-brand-black"
  >
    <div
      class="bg-white z-10"
    >
      <header
        class="relative bg-brand-black"
      >
        <nav
          aria-label="Top"
          class="max-w-7xl mx-auto px-4 md:px-6 xl:px-8"
        >
          <div
            class="h-16 flex items-center justify-between border-b border-brand-black"
          >
            <div
              class="flex-1 flex items-center xl:hidden"
            >
              <button
                class="-ml-2 bg-white p-2 rounded-md text-gray-400"
                data-testid="button-open"
                type="button"
              >
                <span
                  class="sr-only"
                >
                  Open menu
                </span>
                <svg
                  aria-hidden="true"
                  class="h-6 w-6"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4 6h16M4 12h16M4 18h16"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
              </button>
            </div>
            <div
              class="hidden xl:flex-1 xl:block xl:self-stretch"
            >
              <div
                class="h-full flex space-x-10"
              >
                <a
                  class="flex items-center text-white hover:text-coreUI-text-tertiary pb-1.5 duration-500"
                  href="//www.60beans.de/uber-uns"
                >
                  <span
                    class="uppercase text-sm leading-5"
                  >
                    Über uns
                  </span>
                </a>
                <a
                  class="flex items-center text-white hover:text-coreUI-text-tertiary pb-1.5 duration-500"
                  href="//www.60beans.de/roesterei"
                >
                  <span
                    class="uppercase text-sm leading-5"
                  >
                    Unsere Röster
                  </span>
                </a>
                <a
                  class="flex items-center text-white hover:text-coreUI-text-tertiary pb-1.5 duration-500"
                  href="//blog.60beans.com"
                >
                  <span
                    class="uppercase text-sm leading-5"
                  >
                    Blog
                  </span>
                </a>
              </div>
            </div>
            <a
              class="flex h-full items-center pl-2 pr-2"
              href="//www.60beans.de"
            >
              <span
                class="sr-only"
              >
                60beans
              </span>
              <img
                alt="60beans"
                class="h-6"
                src="60beans-light.svg"
              />
            </a>
            <div
              class="flex-1 flow-root flex h-full items-center"
            >
              <div
                class="flex-1 flex h-full items-center justify-end xl:flex-none"
              >
                <div
                  class="hidden h-full xl:flex space-x-8 justify-end"
                >
                  <a
                    class="flex items-center text-white hover:text-coreUI-text-tertiary pb-1.5 duration-500"
                    href="/taste-finder"
                  >
                    <span
                      class="uppercase text-sm leading-5"
                    >
                      Tastefinder
                    </span>
                  </a>
                </div>
                <a
                  class="hidden xl:block ml-10"
                  href="/profile"
                >
                  <svg
                    class="undefined fill-brand-black stroke-brand-black"
                    fill="inherit"
                    height="24"
                    viewBox="0 0 24 25"
                    width="24"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M16 8.66663C16 10.8766 14.21 12.6666 12 12.6666C9.79 12.6666 8 10.8766 8 8.66663C8 6.45663 9.79 4.66663 12 4.66663C14.21 4.66663 16 6.45663 16 8.66663ZM4 18.6666C4 16.0066 9.33 14.6666 12 14.6666C14.67 14.6666 20 16.0066 20 18.6666V20.6666H4V18.6666Z"
                      fill="#FFFFFF"
                      fill-rule="evenodd"
                      stroke="none"
                      stroke-width="none"
                    />
                  </svg>
                </a>
                <div
                  class="ml-4 flow-root xl:ml-10"
                >
                  <a
                    class="group -m-2 p-2 flex items-center"
                    href="/cart"
                    id="toCart"
                  >
                    <div
                      class="static flex-shrink-0 relative"
                    >
                      <svg
                        class="undefined fill-brand-black stroke-brand-black"
                        fill="inherit"
                        height="24"
                        viewBox="0 0 24 25"
                        width="24"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M3 3.66663H5L5.4 5.66663M7 13.6666H17L21 5.66663H5.4M7 13.6666L5.4 5.66663M7 13.6666L4.70711 15.9595C4.07714 16.5895 4.52331 17.6666 5.41421 17.6666H17M17 17.6666C15.8954 17.6666 15 18.5621 15 19.6666C15 20.7712 15.8954 21.6666 17 21.6666C18.1046 21.6666 19 20.7712 19 19.6666C19 18.5621 18.1046 17.6666 17 17.6666ZM9 19.6666C9 20.7712 8.10457 21.6666 7 21.6666C5.89543 21.6666 5 20.7712 5 19.6666C5 18.5621 5.89543 17.6666 7 17.6666C8.10457 17.6666 9 18.5621 9 19.6666Z"
                          fill="none"
                          fill-rule="evenodd"
                          stroke="#FFFFFF"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                      <span
                        class="absolute top-3 left-4 h-4 w-4 z-10 bg-white rounded-full"
                      >
                        <div
                          class="absolute top-0 left-1 z-15 text-coreUI-text-primary text-xs leading-4 font-semibold"
                        >
                          1
                        </div>
                      </span>
                      <span
                        class="sr-only"
                      >
                        items in cart, view bag
                      </span>
                    </div>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </nav>
      </header>
    </div>
    <main
      class="flex flex-grow w-full items-start justify-center bg-white mt-4 mb-4"
    >
      <div
        class="w-full max-w-7xl mx-auto px-6 xl:px-8"
      >
        <h1
          class="mb-4 text-2xl leading-8 font-semibold"
        >
          Dein Warenkorb
        </h1>
        <div
          class="mt-4"
        >
          <div
            class="mt-4 flex justify-center text-lg leading-7"
          >
            Dein Warenkorb ist leer
          </div>
          <div
            class="mt-4 flex justify-center"
          >
            <a
              class="flex w-full md:w-max justify-center"
              href="/catalogue"
            >
              <button
                class="flex w-full justify-center relative inline-flex flex-row items-center rounded-full border-2 px-4 py-2 text-base font-bold disabled:bg-brand-grey-whisper disabled:text-coreUI-text-secondary disabled:cursor-not-allowed text-brand-black bg-primary border-transparent hover:bg-brand-green-starship active:bg-primary"
                data-testid="continueShopping"
                role="button"
                type="button"
              >
                Weiter einkaufen
              </button>
            </a>
          </div>
        </div>
      </div>
    </main>
    <footer
      class="bg-brand-black text-base text-white py-10 z-30"
    >
      <div
        class="w-full max-w-7xl mx-auto mb-10 flex flex-col md:flex-row md:items-center justify-start mx-auto px-8 xl:px-10"
      >
        <div
          class="mb-2 md:mb-0 md:mr-2"
        >
          <svg
            fill="none"
            height="157"
            viewBox="0 0 400 400"
            width="157"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="200"
              cy="200"
              fill="#D4FF81"
              r="200"
            />
            <path
              clip-rule="evenodd"
              d="M266 225.882C266 267.294 243.14 288 214.739 288C196.728 288 183.336 279.488 177.332 266.604V285.239H136V112H177.332V182.86C184.259 171.357 196.728 161.694 214.97 161.694C243.14 161.694 266 182.86 266 224.042V225.882ZM231.006 225.964C231.006 240.559 219.132 252.391 204.483 252.391C189.835 252.391 177.96 240.559 177.96 225.964C177.96 211.369 189.835 199.538 204.483 199.538C219.132 199.538 231.006 211.369 231.006 225.964ZM251 156C263.15 156 273 146.15 273 134C273 121.85 263.15 112 251 112C238.85 112 229 121.85 229 134C229 146.15 238.85 156 251 156Z"
              fill="#212121"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="px-4 text-5xl leading-none"
        >
          Guten Kaffee besser finden.
        </div>
      </div>
      <div
        class="w-full max-w-7xl mx-auto grid gap-2 gap-y-10 grid-cols-1 md:grid-cols-2 mx-auto px-12 xl:px-14"
      >
        <div
          class="order-2 md:order-1"
        >
          <ul>
            <li
              class="mt-0"
            >
              <a
                href="/catalogue"
              >
                Shop
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="/taste-finder"
              >
                Tastefinder
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="//www.60beans.de/uber-uns"
              >
                Über uns
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="//www.notion.so/Datenschutzhinweise-ad5b45261a964166a74883d2770e28ea"
              >
                Datenschutz-Bestimmungen
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="//slender-petunia-c3c.notion.site/Imprint-33b18fd9e469471ab768eef8155da968"
              >
                Impressum
              </a>
            </li>
          </ul>
        </div>
        <div
          class="order-1 md:order-2"
        >
          <div>
            <div>
              <span
                class="font-syne text-3xl leading-10 font-semibold tracking-tight"
              >
                Kundensupport
              </span>
            </div>
            <div
              class="mt-6"
            >
              <span
                class="text-lg leading-7"
              >
                Fragen? Kommentare? Bedenken? Oder möchtest du uns einfach ein paar schöne Worte senden? Bitte klicke einfach unten rechts auf die Sprechblasen. Unser Team steht dir dort gerne zur Verfügung.
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-full max-w-7xl mx-auto text-center mt-10 mx-auto px-12 xl:px-14"
      >
        <span
          class="text-center text-base leading-6"
        >
          © 2022 60beans. Alle Rechte vorbehalten.
        </span>
        <br />
        <span
          class="text-center text-base leading-6"
        >
          Hergestellt mit ❤️ in Berlin.
        </span>
      </div>
    </footer>
  </div>
</div>
`;
